No loose ends, still tidying up story flow for some choices, added a trapdoor with a bad ending

--- a/convocisInk/style.css
+++ b/convocisInk/style.css
@@ -98,6 +98,7 @@ h2 {
     padding: 20px;
     padding-top: 4em;
     background: white;
+    
 }
 
 .switched .container {
@@ -105,6 +106,7 @@ h2 {
 }
 
 p {
+    
     font-size: 13pt;
     color: #888;
     line-height: 1.7em;
@@ -153,10 +155,14 @@ img {
   (Will always appear inside <p> element by default.)
 */
 .choice {
-    text-align: center;
+    text-align: left;
     line-height: 1.7em;
+    border-top: 1px solid;
+    padding-top: 15px;
 }
-
+.choice:before {
+    content:"⦾ ";
+}
 /* 
   Class applied to first choice
 */
@@ -169,6 +175,7 @@ img {
 */
 .choice a {
     font-size: 15pt;
+    
 }
 
 /* 
